Issue#SB-21097 Need to hide Scrollbar on right side in modal

--- a/src/app/client/src/app/modules/discussion/components/forum/forum.component.scss
+++ b/src/app/client/src/app/modules/discussion/components/forum/forum.component.scss
@@ -10,6 +10,7 @@
     width: 100%;
     height: 100vh;
     border: 0;
+    overflow: hidden;
   }
 
   .sb-modal .ui.modal>.close {
